Fix: footer background image wasn't full height on mobile

--- a/css/site.css
+++ b/css/site.css
@@ -77,7 +77,7 @@ p {
   background-image: url('/assets/img/bg-9.svg');
   background-position: left;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
 }
 
 .horizontal-center {
